--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3741,6 +3741,25 @@
   file = {/Users/nidhivinod/Zotero/storage/9UPSQQ7V/García-Plazaola et al. - 2004 - Acclimation of antioxidant pools to the light envi.pdf}
 }
 
+@article{garcia-plazaolaAcclimationAntioxidantPools2004a,
+  title = {Acclimation of Antioxidant Pools to the Light Environment in a Natural Forest Canopy},
+  author = {García-Plazaola, José Ignacio and Becerril, José María and Hernández, Antonio and Niinemets, Ülo and Kollist, Hannes},
+  date = {2004},
+  journaltitle = {New Phytologist},
+  volume = {163},
+  number = {1},
+  pages = {87--97},
+  issn = {1469-8137},
+  doi = {10.1111/j.1469-8137.2004.01096.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8137.2004.01096.x},
+  urldate = {2022-02-11},
+  abstract = {• Leaf growth irradiance determines the pools of photoprotective molecules. We asked whether the potential for acclimation of antioxidant pool size to changes in the leaf light environment is affected by the position of the leaf within the canopy profile. • The study was conducted in a mixed canopy formed by Tilia cordata at the lower level and Populus tremula at the upper level. Leaves were either exposed to extra light or enclosed in shade bags. • Ascorbate, glutathione and α-tocopherol pools increased with growth irradiance. Only α-tocopherol increased in leaves of both species in response to extra light. The slope of tocopherol changes was positively correlated with growth irradiance in both species. It also correlated with the slope of xanthophyll cycle (VAZ, sum of violaxanthin, antheraxanthin and zeaxanthin) pool changes with cumulative extra light in T. cordata. • We conclude that α-tocopherol is the key antioxidant altering tolerance to high light, and that it may cooperate with zeaxanthin. The pools of hydrophilic antioxidants either acclimate more slowly, or their pools are large enough not to limit the overall acclimation to altered light environment.},
+  langid = {english},
+  keywords = {antioxidants,ascorbate,canopy light gradient,glutathione,light acclimation,Populus tremula,Tilia cordata,tocopherol},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2004.01096.x},
+  file = {/Users/nidhivinod/Zotero/storage/Y98P5QZ7/García-Plazaola et al. - 2004 - Acclimation of antioxidant pools to the light envi.pdf}
+}
+
 @article{garciaImportanceHydraulicStrategy2021,
   title = {Importance of Hydraulic Strategy Trade-Offs in Structuring Response of Canopy Trees to Extreme Drought in Central {{Amazon}}},
   author = {Garcia, Maquelle Neves and Ferreira, Marciel José and Ivanov, Valeriy and dos Santos, Victor Alexandre Hardt Ferreira and Ceron, João Vitor and Guedes, Alacimar Viana and Saleska, Scott Reid and Oliveira, Rafael Silva},
@@ -4086,6 +4105,23 @@
   langid = {english},
   annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Reviews Subject\_term: Climate-change ecology;Ecosystem ecology;Forest ecology;Forestry;Tropical ecology Subject\_term\_id: climate-change-ecology;ecosystem-ecology;forest-ecology;forestry;tropical-ecology},
   file = {/Users/nidhivinod/Zotero/storage/EDHFWFFA/Gora and Esquivel-Muelbert - 2021 - Implications of size-dependent tree mortality for .pdf;/Users/nidhivinod/Zotero/storage/KS5ADPCH/s41477-021-00879-0.html}
+}
+
+@article{gossBiodiversityNPQ2015,
+  title = {Biodiversity of {{NPQ}}},
+  author = {Goss, Reimund and Lepetit, Bernard},
+  date = {2015-01-01},
+  journaltitle = {Journal of Plant Physiology},
+  series = {Plant {{Physiology}} Meets {{Biodiversity}}},
+  volume = {172},
+  pages = {13--32},
+  issn = {0176-1617},
+  doi = {10.1016/j.jplph.2014.03.004},
+  url = {https://www.sciencedirect.com/science/article/pii/S0176161714000686},
+  urldate = {2022-02-11},
+  abstract = {In their natural environment plants and algae are exposed to rapidly changing light conditions and light intensities. Illumination with high light intensities has the potential to overexcite the photosynthetic pigments and the electron transport chain and thus induce the production of toxic reactive oxygen species (ROS). To prevent damage by the action of ROS, plants and algae have developed a multitude of photoprotection mechanisms. One of the most important protection mechanisms is the dissipation of excessive excitation energy as heat in the light-harvesting complexes of the photosystems. This process requires a structural change of the photosynthetic antenna complexes that are normally optimized with regard to efficient light-harvesting. Enhanced heat dissipation in the antenna systems is accompanied by a strong quenching of the chlorophyll a fluorescence and has thus been termed non-photochemical quenching of chlorophyll a fluorescence, NPQ. The general importance of NPQ for the photoprotection of plants and algae is documented by its wide distribution in the plant kingdom. In the present review we will summarize the present day knowledge about NPQ in higher plants and different algal groups with a special focus on the molecular mechanisms that lead to the structural rearrangements of the antenna complexes and enhanced heat dissipation. We will present the newest models for NPQ in higher plants and diatoms and will compare the features of NPQ in different algae with those of NPQ in higher plants. In addition, we will briefly address evolutionary aspects of NPQ, i.e. how the requirements of NPQ have changed during the transition of plants from the aquatic habitat to the land environment. We will conclude with a presentation of open questions regarding the mechanistic basis of NPQ and suggestions for future experiments that may serve to obtain this missing information.},
+  langid = {english},
+  keywords = {Lhcsr,Lhcx,NPQ,PsbS,Xanthophyll cycle}
 }
 
 @article{gouldenCaliforniaForestDieoff2019,
@@ -9068,6 +9104,22 @@
   file = {/Users/nidhivinod/Zotero/storage/4ANYL6FV/Niinemets et al. - 2015 - A worldwide analysis of within-canopy variations i.pdf;/Users/nidhivinod/Zotero/storage/LPSIJWEA/nph.html}
 }
 
+@article{niyogiSafetyValvesPhotosynthesis2000,
+  title = {Safety Valves for Photosynthesis},
+  author = {Niyogi, Krishna K},
+  date = {2000-12-01},
+  journaltitle = {Current Opinion in Plant Biology},
+  volume = {3},
+  number = {6},
+  pages = {455--460},
+  issn = {1369-5266},
+  doi = {10.1016/S1369-5266(00)00113-8},
+  url = {https://www.sciencedirect.com/science/article/pii/S1369526600001138},
+  urldate = {2022-02-11},
+  abstract = {Recent studies have provided new insights into the ways that plants may dissipate excess photons and electrons, thereby protecting the photosynthetic apparatus against light-induced damage. These ‘safety valves’ include nonphotochemical mechanisms for quenching excited chlorophylls, as well as alternative electron acceptors such as oxygen.},
+  langid = {english}
+}
+
 @article{nolanHydraulicFailureTree2021,
   title = {Hydraulic Failure and Tree Size Linked with Canopy Die-Back in Eucalypt Forest during Extreme Drought},
   author = {Nolan, Rachael H. and Gauthey, Alice and Losso, Adriano and Medlyn, Belinda E. and Smith, Rhiannon and Chhajed, Shubham S. and Fuller, Kathryn and Song, Magnolia and Li, Xine and Beaumont, Linda J. and Boer, Matthias M. and Wright, Ian J. and Choat, Brendan},
@@ -12540,6 +12592,25 @@
   urldate = {2020-11-25},
   langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/JTBBAF5Z/357.6354.917.html}
+}
+
+@article{suzukiReactiveOxygenSpecies2006a,
+  title = {Reactive Oxygen Species and Temperature Stresses: {{A}} Delicate Balance between Signaling and Destruction},
+  shorttitle = {Reactive Oxygen Species and Temperature Stresses},
+  author = {Suzuki, Nobuhiro and Mittler, Ron},
+  date = {2006},
+  journaltitle = {Physiologia Plantarum},
+  volume = {126},
+  number = {1},
+  pages = {45--51},
+  issn = {1399-3054},
+  doi = {10.1111/j.0031-9317.2005.00582.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.0031-9317.2005.00582.x},
+  urldate = {2022-02-11},
+  abstract = {Temperature stress can have a devastating effect on plant metabolism, disrupting cellular homeostasis, and uncoupling major physiological processes. A direct result of stress-induced cellular changes is the enhanced accumulation of toxic compounds in cells that include reactive oxygen species (ROS). Although a considerable amount of work has shown a direct link between ROS scavenging and plant tolerance to temperature stress, recent studies have shown that ROS could also play a key role in mediating important signal transduction events. Thus, ROS, such as superoxide (O2–), are produced by NADPH oxidases during abiotic stress to activate stress-response pathways and induce defense mechanisms. The rates and cellular sites of ROS production during temperature stress could play a central role in stress perception and protection. ROS levels, as well as ROS signals, are thought to be controlled by the ROS gene network of plants. It is likely that in plants this network is interlinked with the different networks that control temperature stress acclimation and tolerance. In this review paper, we attempt to summarize some of the recent studies linking ROS and temperature stress in plants and propose a model for the involvement of ROS in temperature stress sensing and defense.},
+  langid = {english},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.0031-9317.2005.00582.x},
+  file = {/Users/nidhivinod/Zotero/storage/BM7JFC3U/Suzuki and Mittler - 2006 - Reactive oxygen species and temperature stresses .pdf}
 }
 
 @online{SystematicReviewReporting,
