--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -257,15 +257,14 @@ However, the opposite trend was observed for a lone tree surrounded by grass in 
 
 ## 3. Leaf traits 
 
-Leaf traits shape $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a;  @zwienieckiHydraulicLimitationsImposed2004].
+Leaf traits vary vertically across forest strata at anatomical, structural and biochemical levels [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a;  @zwienieckiHydraulicLimitationsImposed2004]. 
+The strongest driver of this variation is the vertical light gradient [*i.e.,* sun and shade leaves, @casasSunShadeLeaves2011; @binLeafTraitExpression2022].
 Leaf morphology adjusts to the previously experienced microenvironment during leaf formation in buds, and also during ongoing leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of far red to red light and associated water demands determine the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016]. 
 Therefore, a continuum of sun and shade leaves are observed throughout the vertical gradient where upper (or outer) canopy leaves vary dramatically from canopy-interior and understory leaves due to the differences in biophysical conditions [Fig. `r fig_NEON_vertical`, @binLeafTraitExpression2022], and also because of differences in biological conditions such as tree size and height [@binLeafTraitExpression2022]. 
-
-Leaf traits vary along the vertical light gradient [*i.e.,* sun and shade leaves, @casasSunShadeLeaves2011; @binLeafTraitExpression2022] at a biochemical, anatomical and structural level [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. 
-Much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], so further research is needed to characterize trait relationships and responses across the full range of microenvironments spanning the forest vertical gradient. 
-It has been established that independent of the light environment, traits also vary within species along the ontogenetic trajectory from the understory to the upper canopy. 
+Yet, independent of the light environment, traits also vary within species along the ontogenetic trajectory from the understory to the upper canopy. 
 For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022]. 
 Therefore, ontogeny is bound to play a role in shaping leaf traits and thermal sensitivity [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a].
+Much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], which was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], so further research is needed to characterize trait relationships and responses across the full range of microenvironments spanning the forest vertical gradient. 
 
 Across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table `r table_leaf_traits`).
