--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -325,21 +325,17 @@ Less than half of tree species express significant light-dependent emissions [@k
 ## 3.# Thermal tolerance
 
 <!--short par giving background on thermal tolerance-->
-The upper thermal thresholds for leaf survival can be approximated by assessing the photosystem II (PSII) functioning using chlorophyll fluorescence techniques [@krauseHightemperatureToleranceTropical2010]. 
+The upper thermal thresholds for leaf survival can be approximated by assessing the photosystem II functioning using chlorophyll fluorescence techniques [@krauseHightemperatureToleranceTropical2010]. 
 At very high $T_{leaf}$ (~40-60 $^{\circ}$C), photosystem II incurs irreversible damage, eventually leading to leaf necrosis and death [@bakerChlorophyllFluorescenceProbe2008; @feeley_thermal_2020; @kunertSummerTemperaturesReachinpress]. 
 Thermal tolerance is described in terms of the temperature at which efficiency of photosystem II starts to decrease, $T_{crit}$, and the $T_{leaf}$ at which efficiency of photosystem II had decreased by 50%, $T_{50}$ [@slotLeafHeatTolerance2021]. 
-
-
-Thermal thresholds for leaves have been hypothesized to vary with leaf temperature, and thus to be higher in sun-exposed upper canopy leaves than in understory leaves. 
-
-Considering sun and shade leaf differences within canopy (Table `r table_leaf_traits`), the temperature at which PSII efficiency declines, $T_{crit}$, and at which it has decreased by 50%, $T_{50}$, varies modestly across the canopy, being only slightly lower for shade than sun leaves for two of three tree species in Panama [@slotPhotosyntheticHeatTolerance2019]. 
-
-Thermal tolerances vary across species, with more variation explained by leaf traits than phylogeny [@feeley_thermal_2020; @slotLeafHeatTolerance2021]; for example, among tropical species, $T_{crit}$ and $T_{50}$ were found to be high in species with large leaves with high thermal capacitance and those with high LMA, respectively [@slotLeafHeatTolerance2021]. 
-Thermal tolerances vary globally across latitude and climate, where $T_{50}$ and $T_{crit}$ decrease across increasing latitudes, and with elevation among tropical forests [@feeley_thermal_2020;  @slotLeafHeatTolerance2021; @osullivanThermalLimitsLeaf2017].
+Thermal tolerances vary across species, with more variation explained by leaf traits than phylogeny [@feeley_thermal_2020; @slotLeafHeatTolerance2021]<!--; for example, among tropical species, $T_{crit}$ and $T_{50}$ were found to be high in species with large leaves with high thermal capacitance and those with high LMA, respectively [@slotLeafHeatTolerance2021]-->.
+Across species, sun leaves that experienced higher maximum temperatures show higher photosynthetic heat tolerance [@perezPhotosyntheticHeatTolerances2020].
+Thermal tolerances globally across latitude and climate, where $T_{50}$ and $T_{crit}$ decrease across increasing latitudes, and with elevation among tropical forests [@feeley_thermal_2020;  @slotLeafHeatTolerance2021; @osullivanThermalLimitsLeaf2017].
 However, they are more closely adapted to microclimate than macroclimate [@feeley_thermal_2020; @slotLeafHeatTolerance2021]. 
 For example, *Quercus muehlenbergii* Engelm. growing in xeric, sunnier conditions showed higher $T_{50}$ by $2{^\circ}C$ than *Quercus macrocarpa* Michx. growing in shaded mesic conditions [@hamerlynckPhotosyntheticStomatalResponses1996a]. 
+
+Based on their variation with the temperatures experienced by leaves, thermal tolerance metrics are hypothesized to be higher in sun-exposed upper canopy leaves than in understory leaves. 
 In an Australian savanna, crowns of *Acacia papyrocarpa* Benth. showed greater $T_{50}$ and higher composite climate stress in the lower, north-facing portions of their crowns than in other crown positions, correlating with low wind speed, greater radiation and $T_{air}$, and lower rates of heat dissipation, as indicated by longer leaf thermal time constants [@curtis_intracanopy_2019]. 
-Across species, sun leaves that experienced higher maximum temperatures show higher photosynthetic heat tolerance [@perezPhotosyntheticHeatTolerances2020]. 
 However, considering sun and shade leaf differences across the vertical profile of a closed-canopy forest in Panama (Table `r table_leaf_traits`), $T_{50}$ varied modestly, being slightly lower for shade than sun leaves for two of three tree species [@slotPhotosyntheticHeatTolerance2019]. 
 The small difference in $T_{50}$ coupled with larger differences in $T_{leaf}$ across thermal microenvironments implies that more thermally tolerant sun leaves tend to operate closer to their thermal limits and could therefore be more vulnerable to heat anomalies [@perezPhotosyntheticHeatTolerances2020].
 
